--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: java
-jdk:
-  - openjdk8
+sudo: true
+dist: trusty
+jdk: oraclejdk11
+addons:
+  apt:
+    packages:
+      - oracle-java11-installer
+before_script: 
+  - chmod a+x ./mvnw
