--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,3 @@
 language: java
-sudo: true
-dist: trusty
-jdk: oraclejdk11
-addons:
-  apt:
-    packages:
-      - oracle-java11-installer
-before_script: 
-  - chmod a+x ./mvnw
+jdk:
+  - openjdk11
